--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-router": "^2.0.0-rc5",
+    "react-router": "^3.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "web-vitals": "^1.0.1"
