--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router": "^3.2.0",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
